<resources>
    <string name="app_name">Temperature Conversion App</string>
    <string name="celsius" translatable="false">Celsius</string>
    <string name="celsius_hint" translatable="false">C</string>
    <string name="fahrenheit" translatable="false">Fahrenheit</string>
    <string name="fahrenheit_hint" translatable="false">F</string>
    <string name="subtitle">Convert C to F and back!</string>
    <string name="subtext">Enter a temperature in either the C or F field, and you\'re done!</string>
    <string name="clear">Clear</string>

    <string name="author" translatable="false">Dion Potkamp v1.0.0</string>
</resources>